--- a/thankyou.html
+++ b/thankyou.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,11 +7,11 @@
     <link rel="stylesheet" href="style1.css">
     <title>Thank you</title>
 </head>
-
 <body>
-    <p id="thankpara">
-        <a href="index.html" id="thank"><b>THANK YOU</b></a>
-    </p>
+    <div id="thankpara">
+        <p>
+            <a href="index.html" id="thank"><b>THANK YOU</b></a>
+        </p>
+    </div>
 </body>
-
 </html>
